--- a/Flexbox/Ejercicio/style_1.css
+++ b/Flexbox/Ejercicio/style_1.css
@@ -1,18 +1,73 @@
 
 .contenedor{
     background-color: rgb(107, 16, 128);
-    width: 80%;
+    width: 96%;
+    margin: 0 auto;
     border:none;
-    align-items: stretch;
-    justify-content: center;
+    text-align: center;
     font-family: "Audiowide", sans-serif;
-    font-weight: 400;
     font-style: normal;
+    padding: 20px;
 }
 
-.h1{
+h1{
     color: white;
     text-align: center;
     font-size: 40px;
     margin-bottom: 20px;
+}
+
+.card{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin: 0 auto 20px auto;
+    border-radius: 10px;
+    padding: 0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.card-child{
+    flex: 1;
+    background-color: rgb(127, 201, 221);
+    padding: 30px;
+    margin: 10px;
+}
+
+.card-child h2 {
+    color: black;
+    font-size: 24px;
+    text-align: left;
+    margin-top: 0;
+    font-family: "Mountains of Christmas", serif;  
+    font-style: normal;
+}
+
+.Text_1 {
+    color: black;
+    font-size: 16px;
+    text-align: left;
+    line-height: 1.5;
+    font-family: "Rock Salt", cursive;
+    font-style: normal;
+}
+
+.Text_2 {
+    color: black;
+    font-size: 16px;
+    text-align: left;
+    line-height: 1.5;
+    font-family: "jacquard 12", cursive;
+    font-size: larger;
+    font-style: normal;
+}
+
+.Text_3 {
+    color: black;
+    font-size: 16px;
+    text-align: left;
+    line-height: 1.5;
+    font-family: "Coral Pixels", cursive;
+    font-style: normal;
 }
