--- a/Flexbox/style.css
+++ b/Flexbox/style.css
@@ -1,15 +1,31 @@
+body {
+    background-color: aliceblue;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.H {
+    background-color: darkblue;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: solid thick black;
+    border-radius: 8px;
+}
+
 .contenedor{
     background-color: darkblue;
     color: white;
+    padding: 20px;
     width: 80%;
     border: solid thick black;
-    border-radius: 10px;
+    border-radius: 8px;
 }
 
 .formulario{
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .caja{
@@ -17,10 +33,9 @@
     flex-direction: row;
 }
 
-.caja-label{
+.caja label{
     flex-basis: 150px;
     margin:5px 0px;
-
 }
 
 h2 {
@@ -28,11 +43,13 @@ h2 {
 }
 
 button {
-    background-color: darkblue;
+    background-color: rgb(81, 81, 175);
     color: white;
     border: none;
-    border-radius: 5px;
-    padding: 5px;
-    margin-top: 10px;
+    border-radius: 10px;
+    padding: 8px;
+    margin-top: 20px;
     margin-bottom: 20px;
+    cursor: pointer
+    transition: 500ms;
 }
